--- a/module3_solution/index.html
+++ b/module3_solution/index.html
@@ -4,7 +4,7 @@
 	<title>Module 3 Solution</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
   </head>
   <body>
@@ -72,6 +72,6 @@
 
 	<script src="js/jquery-2.1.4.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-  	<script src="js/script.js"></script>
+  <script src="js/script.js"></script>
   </body>
 </html>
