--- a/module3_solution/index.html
+++ b/module3_solution/index.html
@@ -4,7 +4,7 @@
 	<title>Module 3 Solution</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="css/stylesheet.css">
+	<link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   </head>
   <body>
