--- a/module3_solution/index.html
+++ b/module3_solution/index.html
@@ -1,77 +1,69 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
   <head>
-	<title>Module 3 Solution</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/bootstrap.min.css">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Module 3 Solution</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
-    <header class="nav-header">
+<body>
+
+  <header>
     <nav id="header-nav" class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
           <div class="navbar-brand">
-            <p class="nav-brand">Food, LLC</p>
+            <a href="index.html" class="">Food, LLC</a>
           </div>
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="true">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </button>	
+          </button>
         </div>
-
         <div id="collapsable-nav" class="collapse navbar-collapse">
-           <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
-            <li class="text-center">
-              <a href="#chicken-div"><p class="item">Chicken</p></a>
-              <hr class="visible-xs">
-            </li>            
-            <li class="text-center beef-item">
-              <a href="#beef-div"><p class="item">Beef</p></a>
-              <hr class="visible-xs">
-            </li>
-            <li class="text-center sushi-item">
-              <a href="#sushi-div"><p class="item">Sushi</p></a>
-            </li>
-          </ul> 
+          <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
+            <li class="text-center"><a href="#chicken">Chicken</a></li>
+            <li class="text-center"><a href="#beef">Beef</a></li>
+            <li class="text-center"><a href="#sushi">Sushi</a></li>
+          </ul>
         </div>
       </div>
     </nav>
-    </header>
 
-	<h1 class="text-center">Our Menu</h1>
-	<div class="row container container-fluid">
-	<div class="col-md-4 col-sm-6 col-xs-12" id="chicken-div">
-	  <section>
-	  	<div id="chicken">
-	  		Chicken
-	  	</div>
-	  	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. </p>
-	  </section>	
-	</div>
-	<div class="col-md-4 col-sm-6 col-xs-12" id="beef-div">
-	  <section>
-	  	<div id="beef">
-	  		Beef
-	  	</div>
-	  	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. </p>
-	  </section>	
-	</div>	
-	<div class="col-md-4 col-sm-12 col-xs-12" id="sushi-div">
-	  <section>
-	  	<div id="sushi">
-	  		Sushi
-	  	</div>
-	  	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. </p>
-	  </section>	
-	</div>
-	</div>	
+    <h1 class="text-center">Our Menu</h1>
+  </header>
 
-	<script src="js/jquery-2.1.4.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-4 col-md-6">
+        <section id="chicken">
+          <h3 class="text-center">Chicken</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dapibus posuere eros vel dictum. Pellentesque ut consequat leo. Sed a lacus laoreet, efficitur lacus ac, tincidunt magna. Quisque consequat enim vel elit vulputate suscipit. Ut viverra nunc eu ullamcorper vulputate. Pellentesque iaculis, velit vel luctus fermentum, felis risus accumsan mi, non sollicitudin magna lacus in mauris. Aliquam mollis fringilla ligula sit amet fermentum. Suspendisse potenti. Phasellus molestie tortor quis enim suscipit, non laoreet sem facilisis. Ut faucibus ante ut dolor efficitur, id ultricies est commodo. Nam bibendum maximus nulla nec mollis. Fusce bibendum orci augue, quis commodo justo faucibus a. Cras porta convallis euismod.</p>
+          
+        </section>
+      </div>
+      <div class="col-lg-4 col-md-6">
+        <section id="beef">
+          <h3 class="text-center">Beef</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dapibus posuere eros vel dictum. Pellentesque ut consequat leo. Sed a lacus laoreet, efficitur lacus ac, tincidunt magna. Quisque consequat enim vel elit vulputate suscipit. Ut viverra nunc eu ullamcorper vulputate. Pellentesque iaculis, velit vel luctus fermentum, felis risus accumsan mi, non sollicitudin magna lacus in mauris. Aliquam mollis fringilla ligula sit amet fermentum. Suspendisse potenti. Phasellus molestie tortor quis enim suscipit, non laoreet sem facilisis. Ut faucibus ante ut dolor efficitur, id ultricies est commodo. Nam bibendum maximus nulla nec mollis. Fusce bibendum orci augue, quis commodo justo faucibus a. Cras porta convallis euismod.</p>
+          
+        </section>
+      </div>
+      <div class="col-lg-4 col-md-12">
+        <section id="sushi">
+          <h3 class="text-center">Sushi</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dapibus posuere eros vel dictum. Pellentesque ut consequat leo. Sed a lacus laoreet, efficitur lacus ac, tincidunt magna. Quisque consequat enim vel elit vulputate suscipit. Ut viverra nunc eu ullamcorper vulputate. Pellentesque iaculis, velit vel luctus fermentum, felis risus accumsan mi, non sollicitudin magna lacus in mauris. Aliquam mollis fringilla ligula sit amet fermentum. Suspendisse potenti. Phasellus molestie tortor quis enim suscipit, non laoreet sem facilisis. Ut faucibus ante ut dolor efficitur, id ultricies est commodo. Nam bibendum maximus nulla nec mollis. Fusce bibendum orci augue, quis commodo justo faucibus a. Cras porta convallis euismod.</p>
+        </section>
+      </div>
+    </div>
+  </div>
+
+  <script src="js/jquery-1.11.3.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
   <script src="js/script.js"></script>
-  </body>
+</body>
 </html>
