--- a/module3_solution/index.html
+++ b/module3_solution/index.html
@@ -15,7 +15,7 @@
       <div class="container">
         <div class="navbar-header">
           <div class="navbar-brand">
-            <a href="index.html" class="">Food, LLC</a>
+            <a href="index.html" class="food">Food, LLC</a>
           </div>
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
